# ner-datasets

./: .gitattributes  0.jsonl  1.jsonl  2.jsonl  3.jsonl  4.jsonl  5.jsonl  LICENSE  README.md  conll2json.py  huggingface_corpora_functions.py  main.py  pyproject.toml
processed_data/aurc/: dev.jsonl  test.jsonl  train.jsonl
processed_data/broad_twitter/: dev.jsonl  test.jsonl  train.jsonl
processed_data/cadec/: dev.jsonl  test.jsonl  train.jsonl
processed_data/cor/: dev.jsonl  test.jsonl  train.jsonl
processed_data/disae/: dev.jsonl  test.jsonl  train.jsonl
processed_data/ftd/: dev.jsonl  test.jsonl  train.jsonl
processed_data/gene_reg/: dev.jsonl  test.jsonl  train.jsonl
processed_data/germeval_14/: dev.jsonl  test.jsonl  train.jsonl
processed_data/herodotos/: dev.jsonl  test.jsonl  train.jsonl
processed_data/medmentions/: dev.jsonl  test.jsonl  train.jsonl
processed_data/ncbi_disease/: dev.jsonl  test.jsonl  train.jsonl
processed_data/scierc/: dev.jsonl  test.jsonl  train.jsonl
processed_data/second_harem/: dev.jsonl  test.jsonl  train.jsonl
processed_data/sigIE/: dev.jsonl  test.jsonl  train.jsonl
processed_data/wnut16/: dev.jsonl  test.jsonl  train.jsonl
raw_data/: README.txt  sigie.iob  sigie.orig
raw_data/aurc/: AURC_DATA.tsv  process_data.py
raw_data/broad_twitter/: dev_h.conll  process_data.py  test_f.conll  train_a.conll  train_b.conll  train_e.conll  train_g.conll
raw_data/cadec/: process_data.py  test.txt  train.txt
raw_data/conll2002_es/: process_data.py
raw_data/conll2002_nl/: process_data.py
raw_data/cor/: dev.data  (+3 more)
(+857 files in other folders)
